--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "lib": ["ES2015", "DOM"],                             /* Specify library files to be included in the compilation. */
     "strict": true,                           /* Enable all strict type-checking options. */
-    "types": ["@types/node", "@agmajs/plugin-settings", "@agmajs/plugin-alert"],                           /* Type declaration files to be included in compilation. */
+    "types": ["@types/node"],                           /* Type declaration files to be included in compilation. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
